--- a/index.html
+++ b/index.html
@@ -2,79 +2,102 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>AR PERFECT - Advanced Trading</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>AR PERFECT - Advanced Trading</title>
   <style>
     body {
+      font-family: Arial, sans-serif;
+      background: #0e0e0e;
+      color: #f2f2f2;
       margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #0e0e0e;
-      color: #fff;
+      padding: 0;
+      line-height: 1.6;
+    }
+
+    header, footer {
+      text-align: center;
+      padding: 20px 10px;
+      background: #1a1a1a;
+    }
+
+    h1, h2 {
+      color: #00ffcc;
     }
 
     nav {
-      background: #111;
+      background: #121212;
       display: flex;
-      justify-content: center;
-      gap: 15px;
-      padding: 15px;
       flex-wrap: wrap;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
+      justify-content: center;
+      padding: 10px 0;
     }
 
     nav a {
-      color: #00ffc8;
+      color: #00ffcc;
       text-decoration: none;
-      font-weight: 600;
-      padding: 10px 16px;
+      margin: 10px 15px;
+      font-weight: bold;
+      padding: 8px 16px;
       border-radius: 5px;
-      transition: background 0.3s, color 0.3s;
+      transition: background 0.3s ease;
     }
 
     nav a:hover {
-      background: #00ffc8;
+      background: #00ffcc;
       color: #000;
     }
 
-    header {
-      text-align: center;
-      padding: 60px 20px;
-    }
-
-    header h1 {
-      font-size: 3rem;
-      color: #00ffc8;
-    }
-
-    header p {
-      font-size: 1.2rem;
-      color: #ccc;
-      margin-top: 10px;
+    main {
+      padding: 20px;
     }
 
     section {
-      padding: 40px 20px;
-      text-align: center;
-    }
-
-    section h2 {
-      font-size: 2rem;
-      color: #00ffc8;
-    }
-
-    footer {
-      background: #111;
-      text-align: center;
+      margin: 30px 0;
       padding: 20px;
-      color: #888;
+      background: #1f1f1f;
+      border-radius: 10px;
+    }
+
+    .button {
+      display: inline-block;
+      margin: 10px;
+      padding: 12px 25px;
+      background: #00ffcc;
+      color: #000;
+      border-radius: 5px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    ul li {
+      margin: 8px 0;
+    }
+
+    blockquote {
+      font-style: italic;
+      margin: 15px 0;
+      border-left: 4px solid #00ffcc;
+      padding-left: 15px;
+    }
+
+    @media (max-width: 600px) {
+      nav {
+        flex-direction: column;
+      }
+
+      nav a {
+        margin: 8px 0;
+      }
     }
   </style>
 </head>
 <body>
+  <header>
+    <h1>Welcome to AR PERFECT</h1>
+    <p>The Ultimate Destination for Smart Crypto and Stock Market Trading</p>
+  </header>
 
-  <!-- ✅ FULL NAVIGATION -->
+  <!-- Navigation -->
   <nav>
     <a href="index.html">Home</a>
     <a href="about.html">About</a>
@@ -89,22 +112,47 @@
     <a href="contact.html">Contact</a>
   </nav>
 
-  <!-- ✅ HOME PAGE HEADER -->
-  <header>
-    <h1>Welcome to AR PERFECT</h1>
-    <p>Advanced Trading Services in Crypto & Stock Market | Founded by Ankit Vishwakarma</p>
-  </header>
+  <main>
+    <section id="intro">
+      <h2>Why AR PERFECT?</h2>
+      <p><strong>AR PERFECT</strong> redefines trading. From stock to crypto, we offer powerful insights and expert strategies. Founded by <strong>Ankit Vishwakarma</strong>, a certified Data Scientist and elite market analyst, we help you invest smartly with confidence.</p>
+    </section>
 
-  <!-- ✅ SECTION EXAMPLE -->
-  <section>
-    <h2>Explore Our Powerful Trading Strategies</h2>
-    <p>Join thousands of smart investors growing with AR PERFECT every day. Learn. Trade. Earn.</p>
-  </section>
+    <section id="services">
+      <h2>Our Services</h2>
+      <ul>
+        <li><strong>Live BTC & NIFTY Charts</strong></li>
+        <li><strong>Online Training</strong></li>
+        <li><strong>UPI Payment Gateway</strong></li>
+        <li><strong>Personal Mentoring</strong></li>
+      </ul>
+    </section>
 
-  <!-- ✅ FOOTER -->
+    <section id="plans">
+      <h2>Investment Plans</h2>
+      <ul>
+        <li><strong>₹500 Plan:</strong> Earn ₹15,000/month</li>
+        <li><strong>₹1000 Plan:</strong> Earn ₹30,000/month</li>
+        <li><strong>₹1500 Plan:</strong> Earn ₹50,000+</li>
+      </ul>
+    </section>
+
+    <section id="testimonials">
+      <h2>Testimonials</h2>
+      <blockquote>“AR PERFECT changed my financial journey completely.” – Priya Sharma</blockquote>
+      <blockquote>“Most trusted trading platform I've used.” – Rahul Jain</blockquote>
+    </section>
+
+    <section id="cta">
+      <h2>Ready to Start?</h2>
+      <a href="payments.html" class="button">Buy Plan</a>
+      <a href="join.html" class="button">Join Now</a>
+    </section>
+  </main>
+
   <footer>
-    <p>&copy; 2025 AR PERFECT | All rights reserved | Founder: Ankit Vishwakarma</p>
+    <p>Contact: <strong>+91 9118162095</strong> | Telegram: <strong>@ankuraja01</strong></p>
+    <p>&copy; 2025 AR PERFECT</p>
   </footer>
-
 </body>
 </html>
