--- a/index.html
+++ b/index.html
@@ -13,51 +13,40 @@
       padding: 0;
       line-height: 1.6;
     }
-
     header, footer {
       text-align: center;
       padding: 20px 10px;
       background: #1a1a1a;
     }
-
     h1, h2 {
       color: #00ffcc;
     }
-
     nav {
-      background: #121212;
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
+      background: #111;
       padding: 10px 0;
     }
-
     nav a {
-      color: #00ffcc;
-      text-decoration: none;
-      margin: 10px 15px;
-      font-weight: bold;
-      padding: 8px 16px;
-      border-radius: 5px;
-      transition: background 0.3s ease;
-    }
-
-    nav a:hover {
+      margin: 8px;
+      padding: 10px 18px;
       background: #00ffcc;
       color: #000;
+      border-radius: 5px;
+      text-decoration: none;
+      font-weight: bold;
+      transition: background 0.3s;
     }
-
-    main {
-      padding: 20px;
+    nav a:hover {
+      background: #00b3b3;
     }
-
     section {
-      margin: 30px 0;
+      margin: 30px 15px;
       padding: 20px;
       background: #1f1f1f;
       border-radius: 10px;
     }
-
     .button {
       display: inline-block;
       margin: 10px;
@@ -68,26 +57,28 @@
       text-decoration: none;
       font-weight: bold;
     }
-
+    .button.big {
+      font-size: 18px;
+      padding: 16px 35px;
+      background: linear-gradient(135deg, #00ffcc, #00b3b3);
+      color: #000;
+      border-radius: 8px;
+      box-shadow: 0 8px 16px rgba(0, 255, 204, 0.3);
+      transition: all 0.3s ease;
+    }
+    .button.big:hover {
+      background: linear-gradient(135deg, #00b3b3, #00ffcc);
+      transform: scale(1.05);
+      box-shadow: 0 10px 20px rgba(0, 255, 204, 0.5);
+    }
     ul li {
       margin: 8px 0;
     }
-
     blockquote {
       font-style: italic;
       margin: 15px 0;
       border-left: 4px solid #00ffcc;
       padding-left: 15px;
-    }
-
-    @media (max-width: 600px) {
-      nav {
-        flex-direction: column;
-      }
-
-      nav a {
-        margin: 8px 0;
-      }
     }
   </style>
 </head>
@@ -97,9 +88,7 @@
     <p>The Ultimate Destination for Smart Crypto and Stock Market Trading</p>
   </header>
 
-  <!-- Navigation -->
   <nav>
-    <a href="index.html">Home</a>
     <a href="about.html">About</a>
     <a href="services.html">Services</a>
     <a href="plans.html">Plans</a>
@@ -145,8 +134,8 @@
 
     <section id="cta">
       <h2>Ready to Start?</h2>
-      <a href="payments.html" class="button">Buy Plan</a>
-      <a href="join.html" class="button">Join Now</a>
+      <a href="payments.html" class="button big">Buy Plan ✅</a>
+      <a href="join.html" class="button big">Join Now ✅</a>
     </section>
   </main>
 
