--- a/btc.html
+++ b/btc.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
-      background: #0f0f0f;
+      background: #0d0d0d;
       margin: 0;
       font-family: 'Segoe UI', sans-serif;
       color: #ffffff;
@@ -15,28 +15,76 @@
       background-color: #1a1a1a;
       padding: 30px 20px;
       text-align: center;
+      box-shadow: 0 0 15px rgba(0, 255, 200, 0.2);
     }
     h1 {
       color: #00ffc8;
       margin: 0;
+      font-size: 36px;
+    }
+    p {
+      color: #ccc;
     }
     .content {
       padding: 30px;
       text-align: center;
     }
+    .iframe-container {
+      max-width: 1000px;
+      margin: 0 auto;
+      box-shadow: 0 0 30px rgba(0, 255, 200, 0.1);
+      border-radius: 12px;
+      overflow: hidden;
+    }
     iframe {
       width: 100%;
       height: 600px;
       border: none;
+    }
+    .btc-info {
+      margin-top: 40px;
+      text-align: left;
+      max-width: 900px;
+      margin: 40px auto;
+      background: #1c1c1c;
+      padding: 20px 30px;
       border-radius: 12px;
-      box-shadow: 0 0 20px rgba(0, 255, 200, 0.2);
+      box-shadow: 0 0 20px rgba(0, 255, 200, 0.1);
+    }
+    .btc-info h2 {
+      color: #00ffc8;
+    }
+    .btc-info p {
+      line-height: 1.6;
+      color: #ccc;
+    }
+    .buttons {
+      text-align: center;
+      margin-top: 30px;
+    }
+    .btn {
+      background: #00ffc8;
+      color: #000;
+      padding: 14px 30px;
+      margin: 10px;
+      border: none;
+      border-radius: 8px;
+      font-size: 16px;
+      font-weight: bold;
+      cursor: pointer;
+      transition: 0.3s ease;
+      box-shadow: 0 0 15px rgba(0, 255, 200, 0.5);
+    }
+    .btn:hover {
+      background: #00c2a0;
+      box-shadow: 0 0 20px rgba(0, 255, 200, 0.8);
     }
     footer {
       background: #1a1a1a;
       color: #aaa;
       text-align: center;
       padding: 20px;
-      margin-top: 40px;
+      margin-top: 60px;
       font-size: 14px;
     }
   </style>
@@ -45,13 +93,26 @@
 
 <header>
   <h1>📈 BTC Live Chart</h1>
-  <p>Track real-time Bitcoin prices and make smart decisions</p>
+  <p>Track real-time Bitcoin prices & market movement</p>
 </header>
 
 <div class="content">
-  <!-- TradingView Widget BEGIN -->
-  <iframe src="https://s.tradingview.com/embed-widget/symbol-overview/?locale=en#%7B%22symbols%22%3A%5B%5B%22BINANCE%3ABTCUSDT%7D%22%5D%5D%2C%22width%22%3A%22100%25%22%2C%22height%22%3A600%2C%22colorTheme%22%3A%22dark%22%7D" allowfullscreen></iframe>
-  <!-- TradingView Widget END -->
+  <!-- Live Chart Embed -->
+  <div class="iframe-container">
+    <iframe src="https://s.tradingview.com/embed-widget/single-quote/?locale=en#%7B%22symbol%22%3A%22BINANCE%3ABTCUSDT%22%2C%22width%22%3A%22100%25%22%2C%22height%22%3A600%2C%22colorTheme%22%3A%22dark%22%7D" allowfullscreen></iframe>
+  </div>
+
+  <div class="btc-info">
+    <h2>About Bitcoin (BTC)</h2>
+    <p><strong>Bitcoin</strong> is the first decentralized digital currency that enables instant payments to anyone, anywhere in the world. It operates without a central authority and uses blockchain technology for secure and transparent transactions.</p>
+    <p>Bitcoin is known for its volatility, making it a favorite for traders and investors. It’s widely used as a store of value and referred to as "Digital Gold".</p>
+    <p>Keep an eye on the market trends, volume, RSI, and news updates before making any trade decisions.</p>
+  </div>
+
+  <div class="buttons">
+    <button class="btn">🛒 Buy BTC</button>
+    <button class="btn">📤 Sell BTC</button>
+  </div>
 </div>
 
 <footer>
