--- a/nifty.html
+++ b/nifty.html
@@ -15,21 +15,63 @@
       background-color: #1c1c1c;
       padding: 30px 20px;
       text-align: center;
+      box-shadow: 0 0 15px rgba(0, 255, 200, 0.2);
     }
     h1 {
       margin: 0;
       color: #00ffc8;
+      font-size: 36px;
+    }
+    p {
+      color: #ccc;
     }
     .content {
       padding: 30px;
       text-align: center;
     }
-    iframe {
-      width: 100%;
-      height: 600px;
-      border: none;
+    .chart-container, .news-container {
+      max-width: 1000px;
+      margin: 30px auto;
       border-radius: 12px;
-      box-shadow: 0 0 20px rgba(0, 255, 200, 0.2);
+      overflow: hidden;
+      box-shadow: 0 0 30px rgba(0, 255, 200, 0.1);
+    }
+    .nifty-info {
+      max-width: 900px;
+      margin: 40px auto;
+      background: #1c1c1c;
+      padding: 20px 30px;
+      border-radius: 12px;
+      box-shadow: 0 0 20px rgba(0, 255, 200, 0.1);
+      text-align: left;
+    }
+    .nifty-info h2 {
+      color: #00ffc8;
+    }
+    .nifty-info p {
+      line-height: 1.6;
+      color: #ccc;
+    }
+    .buttons {
+      text-align: center;
+      margin-top: 30px;
+    }
+    .btn {
+      background: #00ffc8;
+      color: #000;
+      padding: 14px 30px;
+      margin: 10px;
+      border: none;
+      border-radius: 8px;
+      font-size: 16px;
+      font-weight: bold;
+      cursor: pointer;
+      transition: 0.3s ease;
+      box-shadow: 0 0 15px rgba(0, 255, 200, 0.5);
+    }
+    .btn:hover {
+      background: #00c2a0;
+      box-shadow: 0 0 20px rgba(0, 255, 200, 0.8);
     }
     footer {
       background-color: #1c1c1c;
@@ -37,6 +79,7 @@
       color: #bbb;
       text-align: center;
       font-size: 14px;
+      margin-top: 60px;
     }
   </style>
 </head>
@@ -48,9 +91,31 @@
 </header>
 
 <div class="content">
-  <!-- TradingView Widget BEGIN -->
-  <iframe src="https://s.tradingview.com/embed-widget/symbol-overview/?locale=en#%7B%22symbols%22%3A%5B%5B%22NSE%3ANIFTY%20750%22%5D%5D%2C%22colorTheme%22%3A%22dark%22%2C%22isTransparent%22%3Afalse%2C%22width%22%3A%22100%25%22%2C%22height%22%3A600%7D" allowfullscreen></iframe>
-  <!-- TradingView Widget END -->
+  
+  <!-- ✅ Live Chart Widget START -->
+  <div class="chart-container">
+    <iframe src="https://s.tradingview.com/embed-widget/mini-symbol-overview/?symbol=NSE%3ANIFTY&width=100%25&height=500&locale=en&utm_source=localhost&utm_medium=widget&utm_campaign=chart&utm_term=NSE%3ANIFTY&colorTheme=dark&isTransparent=false" width="100%" height="500" frameborder="0" allowtransparency="true" scrolling="no"></iframe>
+  </div>
+  <!-- ✅ Live Chart Widget END -->
+
+  <!-- ℹ Nifty Information -->
+  <div class="nifty-info">
+    <h2>About NIFTY50</h2>
+    <p><strong>NIFTY50</strong> is India's leading stock market index representing the top 50 companies listed on the NSE (National Stock Exchange). It covers major sectors like banking, IT, pharma, FMCG, and more.</p>
+    <p>Traders use NIFTY as a benchmark to track market performance and analyze trends for short- and long-term investing.</p>
+  </div>
+
+  <!-- 🔘 Buttons -->
+  <div class="buttons">
+    <button class="btn">📈 Buy NIFTY</button>
+    <button class="btn">📉 Sell NIFTY</button>
+  </div>
+
+  <!-- 📰 Live News Section -->
+  <div class="news-container">
+    <iframe src="https://s.tradingview.com/embed-widget/news/?locale=en#%7B%22feedMode%22%3A%22market%22%2C%22market%22%3A%22india%22%2C%22colorTheme%22%3A%22dark%22%2C%22isTransparent%22%3Afalse%2C%22width%22%3A%22100%25%22%2C%22height%22%3A400%7D" width="100%" height="400" frameborder="0" allowtransparency="true" scrolling="no"></iframe>
+  </div>
+
 </div>
 
 <footer>
