--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
   <header>
     <h1>Welcome to AR PERFECT</h1>
-    <img src="IMG_20250718_115312_760.webp" alt="Ankit Vishwakarma" class="profile" />
+    <img src="ankit.jpg" alt="Ankit Vishwakarma" class="profile" />
     <p>The Ultimate Destination for Smart Crypto and Stock Market Trading</p>
   </header>
 
@@ -153,7 +153,7 @@
     <section id="founder">
       <h2>👨‍💼 Meet the Founder</h2>
       <div class="founder-section">
-        <img src="IMG_20250718_115312_760.webp" alt="Ankit Vishwakarma" />
+        <img src="ankit.jpg" alt="Ankit Vishwakarma" />
         <div class="founder-text">
           <p><strong>Ankit Vishwakarma</strong> is a data scientist, technical analyst, and the visionary behind AR PERFECT. With a passion for helping others grow financially, he brings years of market experience, cutting-edge strategies, and personalized mentoring to make every investor confident and successful.</p>
         </div>
