--- a/join.html
+++ b/join.html
@@ -22,13 +22,18 @@
       margin: 0;
       font-size: 2.5em;
     }
+    header p {
+      color: #ccc;
+      font-size: 1.1em;
+      margin-top: 10px;
+    }
     .content {
       max-width: 600px;
       margin: 40px auto;
       padding: 30px;
       background: #1e1e1e;
       border-radius: 12px;
-      box-shadow: 0 0 20px rgba(0, 255, 200, 0.2);
+      box-shadow: 0 0 20px rgba(0, 255, 200, 0.15);
     }
     label {
       display: block;
@@ -43,16 +48,19 @@
       border-radius: 8px;
       background: #333;
       color: #fff;
+      font-size: 1em;
     }
     button {
-      padding: 12px 24px;
+      width: 100%;
+      padding: 14px;
       background: #00ffc8;
       border: none;
       color: #000;
       font-weight: bold;
       border-radius: 8px;
       cursor: pointer;
-      transition: background 0.3s;
+      font-size: 1.1em;
+      transition: 0.3s ease;
     }
     button:hover {
       background: #00cba3;
@@ -61,8 +69,12 @@
       text-align: center;
       margin-top: 30px;
     }
+    .quick-links h3 {
+      margin-bottom: 15px;
+      font-size: 1.2em;
+    }
     .quick-links a {
-      margin: 10px;
+      margin: 8px 12px;
       text-decoration: none;
       color: #00ffc8;
       font-weight: bold;
@@ -85,20 +97,20 @@
 </header>
 
 <div class="content">
-  <form action="https://formspree.io/f/mayvlrjq" method="POST">
+  <form id="joinForm">
     <label for="name">Full Name:</label>
     <input type="text" id="name" name="name" required>
 
     <label for="phone">Phone/WhatsApp Number:</label>
     <input type="tel" id="phone" name="phone" required>
 
-    <label for="email">Email Address:</label>
+    <label for="email">Email Address (optional):</label>
     <input type="email" id="email" name="email">
 
     <label for="message">Your Query or Plan Details:</label>
     <textarea id="message" name="message" rows="5" required></textarea>
 
-    <button type="submit">Join Now</button>
+    <button type="submit">Join Now on WhatsApp</button>
   </form>
 
   <div class="quick-links">
@@ -112,6 +124,50 @@
 <footer>
   <p>&copy; 2025 AR PERFECT | Join the Smart Traders | Built by Ankit Vishwakarma</p>
 </footer>
+
+<script>
+  document.getElementById("joinForm").addEventListener("submit", function(e) {
+    e.preventDefault();
+
+    const name = document.getElementById("name").value.trim();
+    const phone = document.getElementById("phone").value.trim();
+    const email = document.getElementById("email").value.trim();
+    const message = document.getElementById("message").value.trim();
+
+    if (!name || !phone || !message) {
+      alert("Please fill all required fields.");
+      return;
+    }
+
+    // ✅ 1. Save to Google Sheet
+    fetch("YOUR_GOOGLE_SCRIPT_URL", {
+      method: "POST",
+      body: JSON.stringify({
+        name: name,
+        phone: phone,
+        email: email,
+        message: message
+      }),
+      headers: {
+        "Content-Type": "application/json"
+      }
+    }).then(res => res.text()).then(response => {
+      console.log("Saved to Google Sheet:", response);
+    }).catch(err => {
+      console.error("Error saving to sheet:", err);
+    });
+
+    // ✅ 2. Send to WhatsApp
+    const whatsappNumber = "919118162095";
+    const text = `*New Join Request - AR PERFECT*%0A` +
+                 `👤 *Name:* ${name}%0A` +
+                 `📱 *Phone:* ${phone}%0A` +
+                 (email ? `📧 *Email:* ${email}%0A` : "") +
+                 `📝 *Message:* ${message}`;
+    const link = `https://wa.me/${whatsappNumber}?text=${text}`;
+    window.open(link, "_blank");
+  });
+</script>
 
 </body>
 </html>
